--- a/generators/app/templates/src/templates/pages/index.hbs
+++ b/generators/app/templates/src/templates/pages/index.hbs
@@ -7,5 +7,11 @@
 
   <body>
     <h1>handlebars: {{name}}</h1>
+    <div>
+      异步获取的时间戳: <span id="now"></span>
+    </div>
+
+    <script src="/vendor.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
