--- a/generators/app/templates/src/templates/pages/index.ejs
+++ b/generators/app/templates/src/templates/pages/index.ejs
@@ -7,5 +7,17 @@
 
   <body>
     <h1>Hi, <%= name %></h1>
+    <h2><%= greeting%></h2>
+    <ul>
+      <% books.forEach(function(book) { %>
+        <li><%= book.title%></li>
+      <% }) %>
+    </ul>
+    <div>
+      异步获取的时间戳: <span id="now"></span>
+    </div>
+
+    <script src="/vendor.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
