--- a/generators/app/templates/src/templates/pages/index.pug
+++ b/generators/app/templates/src/templates/pages/index.pug
@@ -10,4 +10,7 @@ block append script
   script(src="/index.js")
 
 block content
-  h1 Hello world.
+  h1 Hello #{name}
+  div
+    span 异步获取的时间戳：
+    span#now
