工程迁移，从packing中迁移到generator-packing

--- a/generators/app/templates/src/templates/pages/index.html
+++ b/generators/app/templates/src/templates/pages/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>html test</title>
+    <link rel=stylesheet type=text/css href="/index.css">
   </head>
 
   <body>
