--- a/generators/app/templates/src/templates/pages/index.hbs
+++ b/generators/app/templates/src/templates/pages/index.hbs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>html test</title>
+    <title>handlebars template</title>
+    <link rel=stylesheet type=text/css href="/index.css">
   </head>
 
   <body>
