--- a/generators/app/templates/src/templates/pages/index.vm
+++ b/generators/app/templates/src/templates/pages/index.vm
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>html test</title>
+    <title>velocity test</title>
+    <link rel=stylesheet type=text/css href="/index.css">
   </head>
 
   <body>
