chore: 在模版页面增加manifest.js的引用

--- a/generators/app/templates/src/templates/pages/index.ejs
+++ b/generators/app/templates/src/templates/pages/index.ejs
@@ -18,6 +18,7 @@
       异步获取的时间戳: <span id="now"></span>
     </div>
 
+    <script src="/manifest.js"></script>
     <script src="/vendor.js"></script>
     <script src="/index.js"></script>
   </body>
