--- a/generators/app/templates/src/templates/pages/index.vm
+++ b/generators/app/templates/src/templates/pages/index.vm
@@ -11,6 +11,8 @@
     <div>
       异步获取的时间戳: <span id="now"></span>
     </div>
+
+    <script src="/manifest.js"></script>
     <script src="/vendor.js"></script>
     <script src="/index.js"></script>
   </body>
