chore: 支持pug外的其他模版类型

--- a/generators/app/templates/src/templates/pages/default.vm
+++ b/generators/app/templates/src/templates/pages/default.vm
@@ -7,5 +7,9 @@
   <body>
     <h1>Hello, $name</h1>
     <h2>$me</h2>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
   </body>
 </html>
