--- a/generators/app/templates/src/templates/pages/default.html
+++ b/generators/app/templates/src/templates/pages/default.html
@@ -7,5 +7,9 @@
   <body>
     <h1>Hello __name__</h1>
     <h2>__me__</h2>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
   </body>
 </html>
